Ajustes finais para verificar se camera desconectou
